# dyscount

./: ACCEPTANCE_CRITERIA.md  AGENTS.md  DEFINITION_OF_DONE.md  DO_NEXT.md  FEATURE_COMPARISON.md  GAP_ANALYSIS.md  PLAN.md  PYTHON_PRODUCTION_READY.md  README.md  STATUS.md  WHAT_WE_DID.md
docs/: user-guide.md
go/: .gitignore  DO_NEXT.md  (+4 more)
python/: DO_NEXT.md  Dockerfile  PLAN.md  STATUS.md  WHAT_WE_DID.md  pyproject.toml
python/benchmarks/: __init__.py  latency_benchmark.py  security_audit.py
python/data/default/: ExistingTable.db  TestTable.db  TestTable2.db
python/tasks/done/: M1P2_T10_TESTS_DOCKER.md  M1P2_T1_SETUP_MONOREPO.md  M1P2_T2_CORE_PACKAGE.md  M1P2_T3_API_PACKAGE.md  M1P2_T4_CLI_PACKAGE.md  M1P2_T5_CREATE_TABLE.md  M1P2_T6_DELETE_TABLE.md  M1P2_T7_LIST_TABLES.md  M1P2_T8_DESCRIBE_TABLE.md  M1P2_T9_DESCRIBE_ENDPOINTS.md  M1P3_T2_PUT_ITEM.md  M1P3_T5_CONDITION_EXPRESSIONS.md  M1P3_T6_E2E_DATA_OPS.md
python/tasks/todo/: M1P3_MASTER_CHECKLIST.md  M1P3_T1_GET_ITEM.md  M1P3_T2_PUT_ITEM.md  M1P3_T3_DELETE_ITEM.md  M1P3_T4_UPDATE_ITEM.md
python/tests/: __init__.py  conftest.py  test_api_basic.py  test_backup.py  test_batch_get_item.py  test_batch_write_item.py  test_cli.py  test_condition_expression.py  test_condition_parser.py  test_create_table.py  test_create_table_gsi.py  test_delete_item.py  test_delete_table.py  test_describe_table.py  test_get_item.py  test_import_export.py  test_list_tables.py  test_models.py  test_partiql.py  test_put_item.py  test_query.py  test_scan.py  test_streams.py  test_tagging.py  test_transact_get_items.py  test_transact_write_items.py  test_ttl.py  test_update_item.py  test_update_table_gsi.py
python/tests/e2e/: __init__.py  conftest.py  test_data_operations.py
rust/: .gitignore  Cargo.toml  DO_NEXT.md  PLAN.md  README.md  STATUS.md  WHAT_WE_DID.md
rust/src/: global_tables.rs  handlers.rs  items.rs  main.rs  models.rs  partiql.rs  storage.rs  stream_manager.rs
rust/src/expression/: evaluator.rs  mod.rs  parser.rs
(+69 files in other folders)
