[project]
name = "dyscount"
version = "0.1.0"
description = "Dyscount - Distributed Task Queue System"
requires-python = ">=3.11"

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
dyscount-core = { workspace = true }
dyscount-api = { workspace = true }
dyscount-cli = { workspace = true }

[dependency-groups]
dev = [
    "ruff>=0.9.0",
    "ty>=0.0.1",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "boto3>=1.34.0",
    "boto3-stubs[dynamodb]>=1.34.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
