[package]
name = "dyscount"
version = "0.1.0"
edition = "2021"
authors = ["e6qu <e6qu@example.com>"]
description = "DynamoDB-compatible API service written in Rust"
license = "AGPL-3.0"
repository = "https://github.com/e6qu/dyscount"

[dependencies]
# Web framework
axum = "0.7"
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
rusqlite = { version = "0.31", features = ["bundled", "backup"] }

# Utilities
uuid = { version = "1.7", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Config
config = "0.14"

[dev-dependencies]
tokio-test = "0.4"
reqwest = { version = "0.11", features = ["json"] }
tempfile = "3.10"

[[bin]]
name = "dyscount"
path = "src/main.rs"
